# Hetzner_shop

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_CHECKLIST.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  install.py  install.sh  main.py  project_check.py  pyproject.toml  pytest.ini  release_check.sh  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial.py  __init__.py
api/: __init__.py  admin.py  auth.py  orders.py  servers.py  users.py
app/: __init__.py  main.py
app/application/handlers/: user_registered.py
app/core/: bootstrap.py  config.py  constants.py  container.py  environment.py  logging.py  paths.py  security.py  version.py
app/database/: base.py  session.py  unit_of_work.py
app/database/models/: __init__.py  audit_log.py  datacenter.py  firewall.py  image.py  location.py  network.py  notification.py  operation.py  order.py  order_item.py  payment.py  permission.py  placement_group.py  product.py  provider_account.py  role.py  role_permission.py  server.py  server_type.py  setting.py  ssh_key.py  user.py  wallet.py  wallet_transaction.py
app/domain/events/: base.py  user_events.py
app/infrastructure/database/: base.py  session.py
app/infrastructure/events/: event_bus.py  handlers.py
app/infrastructure/providers/: base.py  factory.py  manager.py
app/infrastructure/providers/hetzner/: client.py  images.py  locations.py  server_types.py  servers.py
app/providers/: __init__.py  base.py  factory.py
app/providers/hetzner/: __init__.py  client.py  server_api.py
app/repositories/: __init__.py  base.py  order_repository.py  payment_repository.py  product_repository.py  server_repository.py  user_repository.py
app/scheduler/: __init__.py  scheduler.py
app/services/: __init__.py  notification_service.py  order_service.py  payment_service.py  product_service.py  provision_service.py  registration_service.py  server_service.py  user_service.py
app/workers/: __init__.py  provision_worker.py  sync_worker.py
config/: defaults.py
core/: config.py  dependencies.py  logger.py  security.py
database/: base.py  connection.py  session.py
deploy/: backup.sh  cron_setup.sh  docker-compose.prod.yml  health_check.sh  nginx.conf  ssl_setup.sh  ubuntu_install.sh
installer/: __init__.py  backup_setup.py  bootstrap.py  cleanup_setup.py  cron_setup.py  database_setup.py  dependency_check.py  docker_setup.py  domain_setup.py  email_setup.py  env_setup.py  environment_check.py  finalize_setup.py  firewall_setup.py  health_check.py  install.py  locale_setup.py  logrotate_setup.py  monitoring_setup.py  nginx_setup.py  notification_setup.py  permissions_setup.py  preflight.py  queue_setup.py  redis_setup.py  requirements.py  security_setup.py  service_setup.py  ssl_setup.py  system_check.py  system_setup.py  timezone_setup.py  update_setup.py  user_setup.py  worker_setup.py
models/: __init__.py  invoice.py  order.py  payment.py  server.py  subscription.py  user.py
schemas/: __init__.py  invoice.py  order.py  payment.py  server.py  subscription.py  user.py
services/: __init__.py  hetzner_api.py  notification.py  payment_service.py  server_manager.py  subscription_manager.py
tests/: __init__.py  test_api.py  test_auth.py  test_database.py  test_services.py
web/: __init__.py  dashboard.py  routes.py
workers/: __init__.py  celery_app.py  tasks.py
