[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "server-shop"
version = "1.0.0"
description = "Professional multi-provider server shop with Telegram Bot and FastAPI Web Panel."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Ali Ahmadi" }
]

keywords = [
    "telegram",
    "hetzner",
    "cloud",
    "server",
    "hosting",
    "fastapi",
    "aiogram",
    "automation",
    "shop",
    "panel"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration"
]

dependencies = [

    # Telegram
    "aiogram>=3.22.0",

    # Web
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",

    # Database
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.4",

    # Validation
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    # HTTP
    "httpx>=0.28.1",

    # Scheduler
    "apscheduler>=3.11.0",

    # Security
    "argon2-cffi>=25.1.0",
    "cryptography>=45.0.6",
    "pyjwt>=2.10.1",

    # Logging
    "rich>=14.1.0",
    "structlog>=25.4.0",

    # Environment
    "python-dotenv>=1.1.1",

    # Multipart
    "python-multipart>=0.0.20",

    # Templates
    "markupsafe>=3.0.2",

    # Utilities
    "orjson>=3.11.2",
    "tenacity>=9.1.2",
    "typing-extensions>=4.15.0",

    # Date Time
    "python-dateutil>=2.9.0.post0",
    "tzdata>=2025.2",

    # Image
    "pillow>=11.3.0",

    # Excel
    "openpyxl>=3.1.5",

    # PDF
    "reportlab>=4.4.3",

    # Localization
    "babel>=2.17.0",

    # YAML
    "pyyaml>=6.0.2",

    # CLI
    "typer>=0.16.0",
    "click>=8.2.1"
]

[project.urls]
Homepage = "https://github.com/your-org/server-shop"
Documentation = "https://github.com/your-org/server-shop/wiki"
Repository = "https://github.com/your-org/server-shop"
Issues = "https://github.com/your-org/server-shop/issues"

[project.scripts]
server-shop = "app.main:main"
[project.optional-dependencies]

postgres = [
    "asyncpg>=0.30.0"
]

redis = [
    "redis[hiredis]>=6.4.0"
]

dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.8",
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "types-python-dateutil",
    "types-PyYAML"
]

###########################################################
# Hatch
###########################################################

[tool.hatch.build.targets.wheel]

packages = [
    "app"
]

###########################################################
# Pytest
###########################################################

[tool.pytest.ini_options]

pythonpath = [
    "."
]

testpaths = [
    "tests"
]

asyncio_mode = "auto"

addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml"
]

###########################################################
# Coverage
###########################################################

[tool.coverage.run]

branch = true

source = [
    "app"
]

omit = [
    "tests/*",
    "docs/*"
]

###########################################################
# Ruff
###########################################################

[tool.ruff]

line-length = 88

target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "logs",
    "backups",
    "data",
    "docs"
]

###########################################################
# Ruff Lint
###########################################################

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ASYNC",
    "RUF"
]

ignore = [
    "E501"
]

###########################################################
# Black
###########################################################

[tool.black]

line-length = 88

target-version = [
    "py312"
]

###########################################################
# MyPy
###########################################################

[tool.mypy]

python_version = "3.12"

strict = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

check_untyped_defs = true

ignore_missing_imports = true

plugins = [
    "pydantic.mypy"
]

###########################################################
# Project
###########################################################

[tool.server_shop]

project_name = "Hetzner Shop"

release = "Genesis"

channel = "stable"

build = "20260712001"

provider = "Hetzner"

supported_os = [
    "Ubuntu 22.04",
    "Ubuntu 24.04",
    "Debian 12"
]
